--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             python -m venv venv
             . venv/bin/activate
             pip install https://download.pytorch.org/whl/cpu/torch-1.0.1.post2-cp37-cp37m-linux_x86_64.whl
-            pip install pytest
+            pip install pytest numpy
             pip install .
       - save_cache:
           paths:
